Mon Jun 28 03:12:03 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bootstraptest/test_class.rb: add a test for [ruby-core:30843].

Mon Jun 28 02:43:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* class.c (rb_mod_init_copy): when class is dup'ed, a metaclass of the
	  class should be attached to the dup'ed class, not the original
	  class.  [ruby-core:30843] [Bug #3461]

Sat Jun 26 07:59:18 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_method.rb (test_offset_vtbl): check
	  that OS is Windows 32bit or Windows 64bit in order to get
	  correct offset value.

Fri Jun 25 11:45:36 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Fixing a bug that prevented CSV from parsing
	  all multi-line fields correctly.  Patch by Rob Biedenharn.

Sat Jun 26 10:08:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): no needs to copy the
	  original ENV, since it's done in spawn automatically.
	  [ruby-dev:41733]

Fri Jun 25 10:07:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_in_out_err):
	  return the exit status.

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): change the
	  environment of spawned process only.

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): get rid of possible
	  deadlock.

Wed Jun 23 23:49:21 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (str_is_number): renamed from str_isnumber to
	  avoid confusion to str_isnumber in ext/socket/getaddrinfo.c.

Wed Jun 23 21:32:08 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_typelib_file_path): try win64
	  registry entry at first. [ruby-dev:41674] [Bug #3464]

Thu Jul  1 04:21:10 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: don't use __P.

Wed Jun 30 07:29:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): by using